--- a/style.css
+++ b/style.css
@@ -2,7 +2,44 @@ body{
   margin:0
 }
 
-.header{
-  display: flex;
-  flex-direction: row;
+
+#container {
+  height: 100vh;
+  width: 100vw;
+  display: grid;
+  grid-template-rows: repeat(12, 1fr);
+  grid-template-columns: repeat(12, 1fr);
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+#header{
+display: flex;
+grid-row-start: 1;
+grid-row-end: 2;
+grid-column-start: 1;
+grid-column-end: 13;
+display: flex;
+justify-content: space-between;
+}
+
+#links{
+display: flex;
+margin-right: 2rem;
+align-items: center;
+}
+
+#logo-container{
+  justify-content: flex-end;
+  margin-left: 2rem;
+  align-items: center;
+  color: #4EA891;
+}
+
+.content{
+  background-image: url('./images/background.jpg');
+  background-size: cover;
+  grid-column-start: 1;
+  grid-column-end: 13;
+  grid-row-start: 2;
+  grid-row-end: 13;
 }
