--- a/booking.css
+++ b/booking.css
@@ -49,12 +49,13 @@ body {
 
 }
 
-.logo {
+#home {
     font-size: 24px;
     margin-left: 14px;
     padding-bottom: 20px;
     font-family: 'Kanit', sans-serif;
     color: #4EA891;
+    text-decoration: none;
 
 }
 
