--- a/booking.css
+++ b/booking.css
@@ -52,7 +52,7 @@ body {
 #home {
     font-size: 24px;
     margin-left: 14px;
-    padding-bottom: 20px;
+    padding-bottom: 12 px;
     font-family: 'Kanit', sans-serif;
     color: #4EA891;
     text-decoration: none;
@@ -65,13 +65,13 @@ body {
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
-   padding: 30px;
+   padding-bottom: 10x;
 }
 
  #cart {
     font-size: 18px;
     margin-right: 14px;
-    padding-bottom: 20px;
+    padding-bottom: 9px;
     font-family: 'Kanit', sans-serif;
     color: black;
     text-decoration: none;
@@ -80,7 +80,7 @@ body {
  #booking {
     font-size: 18px;
     margin-left: 18px;
-    padding-bottom: 20px;
+    padding-bottom: 9px;
     font-family: 'Kanit', sans-serif;
     color: black;
     text-decoration: none;
