--- a/booking.css
+++ b/booking.css
@@ -45,9 +45,23 @@ body {
     border: 1px solid red;
     border-radius: 10px;
     background-color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    overflow-y: auto;
+
 
 
 }
+
+#mybookings {
+    width: 700px;
+    height: 50px;
+    border: 1px solid red;
+}
+
+
 
 #home {
     font-size: 24px;
