--- a/booking.css
+++ b/booking.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: #b6b3b3;
+    background-color: #e1e1e1;
     min-height: 100vh;
     width: 100vw;
     margin: 0;
@@ -26,7 +26,7 @@ body {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background-color: #d5d3d3; 
+    background-color: #fafafa; 
     border: 1px solid red;
 }
 #content {
@@ -44,7 +44,7 @@ body {
     height: 230px;
     border: 1px solid red;
     border-radius: 10px;
-    background-color: white;
+    background-color: #fafafa;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -59,6 +59,13 @@ body {
     width: 700px;
     height: 50px;
     border: 1px solid red;
+    background-color: #f5f0f0;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    overflow-y: auto;
 }
 
 
