--- a/style.css
+++ b/style.css
@@ -25,6 +25,16 @@ justify-content: space-between;
 display: flex;
 margin-right: 2rem;
 align-items: center;
+text-decoration: none;
+}
+
+#links p{
+  padding-right: 1rem;
+}
+
+#links a{
+  text-decoration: none;
+  color: black;
 }
 
 #logo-container{
@@ -41,4 +51,82 @@ align-items: center;
   grid-column-end: 13;
   grid-row-start: 2;
   grid-row-end: 13;
+}
+
+.content h1{
+  color: white;
+  text-align: center;
+}
+
+.content p{
+  color: white;
+  text-align: center;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+
+.card-container{
+  display: flex;
+  justify-content: center;
+}
+
+
+.card-form{
+  background-color: white;
+  width: 20vw;
+  height: 40vh;
+  margin: 2rem;
+  border-radius: 12px;
+}
+
+.card-form form{
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+
+.form-field {
+  height: 45px;
+  padding: 0 16px;
+  border: none;
+  border-radius: 4px;
+  font-family: 'Rubik', sans-serif;
+  outline: 0;
+  transition: .2s;
+  background-color: #F1F4F3;
+}
+#departure{
+  border-bottom: 2px solid #D2D5D4;
+}
+
+#date{
+  margin-top: 2.5rem;
+  margin-bottom:5.5rem ;
+}
+
+#btn-form{
+  padding: 10px;
+  background-color:  #4EA891;
+  border: 1px solid #ddd;
+  color: white;
+}
+
+.card{
+  background-color: white;
+  width: 20vw;
+  height: 40vh;
+  margin: 2rem;
+  border-radius: 12px;
+}
+
+#card-img{
+  text-align: center;
+
+}
+
+#card-img img{
+  margin-top: 2rem;
+  max-width: 70%;
+  border-bottom: 2px solid #4EA891 ;
 }
