--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ text-decoration: none;
   border-radius: 12px;
 }
 
-.card-form form{
+#form{
   display: flex;
   flex-direction: column;
   padding: 1rem;
@@ -118,6 +118,13 @@ text-decoration: none;
   height: 40vh;
   margin: 2rem;
   border-radius: 12px;
+  overflow-y: auto;
+}
+
+.card p{
+  color: black;
+  font-size: 0.7rem;
+  padding: 0 5px;
 }
 
 #card-img{
@@ -129,4 +136,30 @@ text-decoration: none;
   margin-top: 2rem;
   max-width: 70%;
   border-bottom: 2px solid #4EA891 ;
+}
+
+#trip-details {
+  display: flex;
+  flex-direction: row;
+  overflow-y: auto;
+  background-color: antiquewhite;
+  margin: 1rem 0.5rem;
+  border-radius: 4px;
+  justify-content: space-evenly;
+}
+
+/* Media Query for Responsive Design */
+@media (max-width: 600px) {
+  #trip-details {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+}
+
+.book{
+  background-color: #4EA891;
+  border: none;
+  margin:0.2rem;
+  border-radius: 4px;
 }
