--- a/bookings.css
+++ b/bookings.css
@@ -47,6 +47,14 @@ h4 {
   color: #192325;
 }
 
+h5 {
+  text-align: center;
+  font-size: 14px;
+  color: #50A990;
+  font-weight: 400;
+  margin: 0;
+}
+
 #title {
   font-family: 'Noto Sans KR', sans-serif;
   color: #50A990;
@@ -68,7 +76,7 @@ h4 {
   margin-bottom: 5vh;
 }
 
-#cart {
+#trips {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -80,9 +88,22 @@ h4 {
   overflow: scroll;
   padding: 20px;
   border-radius: 10px 10px 0px 0px;
+  ;
 }
 
-.selected-trip {
+#trips2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  color: black;
+  background-color: white;
+  border-radius: 0px 0px 10px 10px;
+  width: 60%;
+  padding: 0px 20px 20px 20px;
+}
+
+.booked-trip {
   height: 40px;
   width: 85%;
   display: flex;
@@ -96,48 +117,14 @@ h4 {
   padding: 10px;
 }
 
-.price {
+.departure {
   font-weight: 600;
 }
 
-.delete {
-  width: 30px;
-  height: 30px;
-  border: none;
-  background-color: #50A990;
-  border-radius: 4px;
-  color: white;
-  font-size: 12px;
-  cursor: pointer;
-}
-
-#cart2 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+#divider {
+  height: 1px;
+  width: 20%;
   background-color: #001748;
-  width: 60%;
-  padding: 20px;
-  border-radius: 0px 0px 10px 10px;
-}
-
-#payment {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #001748;
-  width: 90%;
-  border-radius: 0px 0px 10px 10px;
-  font-weight: 600;
-}
-
-#purchase {
-  width: 90px;
-  height: 30px;
-  border: none;
-  background-color: #50A990;
-  border-radius: 4px;
-  color: white;
-  font-size: 14px;
-  cursor: pointer;
+  margin: 20px;
+  z-index: 1;
 }
